replace padding with margin to avoid too much or no space

--- a/assets/sass/_theme/sections/events/single.sass
+++ b/assets/sass/_theme/sections/events/single.sass
@@ -1,6 +1,7 @@
 .events__page,
 .exhibitions__page
     .hero
+        margin-bottom: 0
         .content
             align-items: stretch
             display: flex
